--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="contact--lockup">
                   <div class="modal">
                     <div class="modal--information">
-                      <p>Pawia 5, 31-154 Kraków, Poland</p>
+                      <p>Ariana,Tunisia</p>
                       <a href="mailto:ayarirami3D@gmail.com">Ayarirami3D@gmail.com </a>
                       <a href="tel:+148126287560">+216 55 24 62 63</a>
                     </div>
